Add member status call
