# api-spec/openapi.yaml
@@ -207,19 +207,27 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/USAddress'
-  '/v1/member/:member_id/status':
+  '/v1/member/:member_id/is_active':
     put:
       tags:
         - Members
       summary: Sets a member to be active or not
       description: ''
       operationId: ''
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/IsActive'
       responses:
+        '400':
+          description: Validation error
+        '404':
+          description: Member was not found
+        '500':
+          description: Server error
         '200':
-          content:
-            text/plain:
-              schema:
-                type: string
+          description: Set active or not
     get:
       tags:
         - Members
@@ -227,12 +235,18 @@ paths:
       description: ''
       operationId: ''
       responses:
+        '400':
+          description: Validation error
+        '404':
+          description: Member was not found
+        '500':
+          description: Server error
         '200':
           description: Returns active or inactive
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/IsActive'
   '/v1/rfid/:rfid':
     get:
       tags:
@@ -415,6 +429,10 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/Area'
+    IsActive:
+      properties:
+        is_active:
+          type: boolean
     Telemetry:
       type: object
       properties:
